WIP theme toggle

--- a/_includes/components/header.html
+++ b/_includes/components/header.html
@@ -3,6 +3,7 @@
     <a href="./">
         <img class="logo" alt="site-logo" src="{{ site.logo }}" title="Site Logo"/>
     </a>
+    <div id="theme-dot" class="theme-dot">&#9775;</div>
     {% endif %}
     <h1 class="tag"><a href="./">{{ site.tag_text }}</a></h1>
     <h4 class="description">{{ site.description }}</h4>
