--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
-<body>
+<body id="theme-wrapper" class="light-theme">
   <div id="yolo-container" class="container left">
-    {% include header.html %}
-    {{ content }}
-    {% include footer.html %}
+    <header>
+      {% include components/header.html %}
+    </header>
+    <main>{{ content }}</main>
+    <footer>
+      {% include components/footer.html %}
+    </footer>
+  {% include scripts.html %}
   </div>
-{% include scripts.html %}
 </body>
 </html>
