--- a/_sass/yolo/_base.scss
+++ b/_sass/yolo/_base.scss
@@ -15,12 +15,9 @@ html {
 
 body {
   margin: 2rem 0 5rem;
-  color: $yolo-secondary-color;
-  background-color: $yolo-primary-color;
 }
 
 a {
-  color: $yolo-link-color;
   text-decoration: none;
 }
 
@@ -30,7 +27,7 @@ a:hover, a:focus {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $family-secondary, sans-serif;
-  margin: 0 0 0.5rem 0rem;
+  margin: 0 0 0.5rem 0;
   line-height: 1;
   text-rendering: optimizeLegibility;
 }
@@ -39,7 +36,6 @@ h1 {
   margin-top: 1.5rem;
   font-size: 2.75rem;
   margin-bottom: 1rem;
-  color: $yolo-accent-color;
 }
 
 h1 a {
@@ -50,35 +46,30 @@ h2 {
   margin-top: 1.5rem;
   font-size: 2rem;
   margin-bottom: 1rem;
-  color: $yolo-accent-color;
 }
 
 h3 {
   margin-top: 1.5rem;
   font-size: 1.75rem;
   margin-bottom: 1rem;
-  color: $yolo-accent-color;
 }
 
 h4 {
   margin-top: 1.5rem;
   font-size: 1.5rem;
   margin-bottom: 1rem;
-  color: $yolo-accent-color;
 }
 
 h5 {
   margin-top: 1.5rem;
   font-size: 1.25rem;
   margin-bottom: 1rem;
-  color: $yolo-accent-color;
 }
 
 h6 {
   margin-top: 1.5rem;
   font-size: 1rem;
   margin-bottom: 1rem;
-  color: $yolo-accent-color;
 }
 
 p, ul, ol, dl, table, pre, blockquote {
@@ -98,7 +89,6 @@ blockquote {
   margin-left: 0;
   margin-right: 0;
   padding: .5rem 1rem;
-  border-left: .25rem solid $yolo-accent-color;
 }
 
 blockquote p:last-child {
@@ -108,7 +98,6 @@ blockquote p:last-child {
 hr {
   border: none;
   margin: 1.5rem 0;
-  border-bottom: 1px dashed $yolo-accent-color;
   position: relative;
   top: -1px;
 }
