WIP total work in progress with scss refactoring, dark/light theme toggle

--- a/_sass/yolo/_images.scss
+++ b/_sass/yolo/_images.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// Variables used in _images.scss
+// Image styling
 // ----------------------------------------------------------------------------
 $thumbnail-width: 128px;
 $ratio-1-by-1: 16 24 32 48 64 96 128 192 256 384 448 512 640;
@@ -7,9 +7,7 @@ $ratio-4-by-3: 100 120 128 160 200 240 256 320 400 480 512 640;
 $ratio-3-by-4:  75  90  96 120 150 180 192 240 300 360 384 480;
 $ratio-16-by-9: 112 128 144 160 192 224 256 320 400 480 512 640;
 $ratio-9-by-16:  63  72  81  90 108 126 144 180 225 270 288 360;
-// ----------------------------------------------------------------------------
-// Base styles for image related HTML elements.
-// ----------------------------------------------------------------------------
+
 img {
   display: block;
   position: relative;
