--- a/_sass/yolo/_syntax.scss
+++ b/_sass/yolo/_syntax.scss
@@ -1,6 +1,8 @@
 // ----------------------------------------------------------------------------
 // Syntax highlighting
 // ----------------------------------------------------------------------------
+@import "variables";
+
 pre, code {
   font-family: $family-monospace;
 }
