--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
-<body id="theme-wrapper" class="light-theme">
-  <div id="yolo-container" class="container left">
+<body id="yolo-site">
+  <div class="container left">
     <header>
       {% include components/header.html %}
     </header>
@@ -10,7 +10,7 @@
     <footer>
       {% include components/footer.html %}
     </footer>
-  {% include scripts.html %}
   </div>
+  {% include scripts.html %}
 </body>
 </html>
