--- a/_sass/yolo/_base.scss
+++ b/_sass/yolo/_base.scss
@@ -1,16 +1,14 @@
 // ----------------------------------------------------------------------------
-// base elements stylesheet
+// Base elements stylesheet
+// - no classes should be defined here (see _yolo.scss)
+// - no colors should be defined here (see _themes.scss)
 // ----------------------------------------------------------------------------
+@import "variables";
+
 html {
   font-size: $size-6;
   line-height: 1.5;
   font-family: $family-primary;
-}
-
-@media (min-width: $tablet) {
-  html {
-    font-size: $size-5;
-  }
 }
 
 body {
@@ -36,10 +34,6 @@ h1 {
   margin-top: 1.5rem;
   font-size: 2.75rem;
   margin-bottom: 1rem;
-}
-
-h1 a {
-  color: inherit;
 }
 
 h2 {
@@ -100,4 +94,50 @@ hr {
   margin: 1.5rem 0;
   position: relative;
   top: -1px;
+}
+
+ul {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding-left: 1.5rem;
+}
+
+ol {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding-left: 2.5rem;
+}
+
+table {
+  width: 100%;
+  border-spacing: 0;
+}
+
+th {
+  font-weight: bold;
+}
+
+thead {
+  font-family: $family-secondary;
+}
+
+thead tr:first-child th:first-child {
+  border-radius: 0.3em 0 0 0;
+}
+thead tr:first-child th:last-child {
+  border-radius: 0 0.3em 0 0;
+}
+tbody tr:last-child td:first-child {
+  border-radius: 0 0 0 0;
+}
+tbody tr:last-child td:last-child {
+  border-radius: 0 0 0 0;
+}
+
+th,
+tr,
+td {
+  vertical-align: middle;
+  text-align: left;
+  padding: 0.3em 0.4em 0.3em 0.4em;
 }
