MVP scss refactor to support theme toggle for light and dark

--- a/_includes/flexbox.html
+++ b/_includes/flexbox.html
@@ -5,7 +5,7 @@
         {% if include.fill %}
         <div class="cell {{ include.fill }}">{{ include.fill }}</div>
         {% else %}
-        <div class="cell yolo-accent-color">{{ i }}</div>
+        <div class="cell accent-color">{{ i }}</div>
         {% endif %}
     </div>
     {% endfor %}
