--- a/_sass/yolo/themes/_arcade.scss
+++ b/_sass/yolo/themes/_arcade.scss
@@ -5,18 +5,17 @@ $light-primary-color: #fbffff;
 $light-secondary-color: #093fc4;
 $light-accent-color: #4113a6;
 $light-code-background-color: #000928;
-$light-code-color: #00e676;
+$light-code-color: #02b960;
 $light-link-color: #f7346d;
 
 $dark-primary-color: #000928;
 $dark-secondary-color: #00e676;
-$dark-accent-color: #596ef8;
+$dark-accent-color: #697df8;
 $dark-code-background-color: #00080f;
 $dark-code-color: #65e9fc;
 $dark-link-color: #ff31b9;
 
 // fonts
-$family-primary: "Roboto Mono", sans-serif;
-$family-secondary: "Raleway", sans-serif;
+$family-primary: "Inconsolata", sans-serif;
+$family-secondary: "Montserrat", sans-serif;
 $family-monospace: "Roboto Mono", monospace;
-$family-code: "Roboto Mono", monospace;
