--- a/_sass/yolo/themes/_yinyang.scss
+++ b/_sass/yolo/themes/_yinyang.scss
@@ -16,7 +16,6 @@ $dark-code-color: #00e676;
 $dark-link-color: #f7346d;
 
 // fonts
-$family-primary: "Inconsolata", sans-serif;
-$family-secondary: "Raleway", sans-serif;
-$family-monospace: "Inconsolata", monospace;
-$family-code: "Inconsolata", monospace;
+$family-primary: "Red Hat Mono", sans-serif;
+$family-secondary: "Open Sans", sans-serif;
+$family-monospace: "Source Code Pro", monospace;
