--- a/_sass/yolo/_images.scss
+++ b/_sass/yolo/_images.scss
@@ -24,6 +24,7 @@ img {
   }
   &.thumbnail {
     object-fit: cover;
+    aspect-ratio: 1/1;
     width: $thumbnail-width;
     height: $thumbnail-width;
     border-radius: .128em;
@@ -50,6 +51,7 @@ img {
       width: $dimension * 1px;
       height: $dimension * 1px;
       object-fit: cover;
+      aspect-ratio: 1/1;
       border-radius: #{$dimension / 1000}em;
       &.max {
         border-radius: #{nth($ratio-1-by-1, -1) / 1000}em;
@@ -65,6 +67,7 @@ img {
       width: $dimension * 1px;
       height: $dimension * 1px;
       object-fit: cover;
+      aspect-ratio: 1/1;
       border-radius: #{$dimension / 1000}em;
       &.max {
         border-radius: #{nth($ratio-1-by-1, -1) / 1000}em;
@@ -144,6 +147,7 @@ img {
       height: $dimension * 1px;
       width: $dimension * 1px;
       object-fit: cover;
+      aspect-ratio: 1/1;
       border-radius: 50%;
       &.max {
         width: 100%;
