WIP syntax highlighting customization with theme colors

--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -2,15 +2,15 @@
   This template is for demonstrating theme fonts on example index.md,
   and not intended to be a reusable template.
 -->
-<h3>Three families</h3>
+<h4>Three families</h4>
 
 <ul>
-    <li class="is-family-primary">Primary Font Family</li>
-    <li class="is-family-secondary">Secondary Font Family</li>
-    <li class="is-monospaced-font">Monospaced Font Family</li>
+    <li class="is-family-primary">Primary Font Family - body and most text</li>
+    <li class="is-family-secondary">Secondary Font Family - headers and accent text</li>
+    <li class="is-monospaced-font">Monospaced Font Family - code</li>
 </ul>
 
-<h3>Primary</h3>
+<h4>Primary</h4>
 
 <ul class="no-bullets">
     <li class="is-family-primary is-size-7">This is-size-7 text.</li>
@@ -22,7 +22,7 @@
     <li class="is-family-primary is-size-1">This is-size-1 text.</li>
 </ul>
 
-<h3>Secondary</h3>
+<h4>Secondary</h4>
 
 <ul class="no-bullets">
     <li class="is-family-secondary is-size-7">This is-size-7 text.</li>
@@ -34,7 +34,7 @@
     <li class="is-family-secondary is-size-1">This is-size-1 text.</li>
 </ul>
 
-<h3>Monospace</h3>
+<h4>Monospace</h4>
 
 <ul class="no-bullets">
     <li class="is-family-monospace is-size-7">This is-size-7 text.</li>
