--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 {% include head.html %}
 <body id="yolo-site">
-  <div class="container left">
+  <div class="container center">
     <header>
       {% include components/header.html %}
     </header>
