--- a/_sass/yolo/_variables.scss
+++ b/_sass/yolo/_variables.scss
@@ -36,7 +36,7 @@ $weight-medium: 500 !default;
 $weight-semibold: 600 !default;
 $weight-bold: 700 !default;
 // ----------------------------------------------------------------------------
-// Syntax highlighting (material) colors
+// Syntax highlighting colors for dark and light themes
 // ----------------------------------------------------------------------------
 $base00: #060E3F !default;
 $base01: #393f45 !default;
@@ -46,14 +46,14 @@ $base04: #adb3ba !default;
 $base05: #c7ccd1 !default;
 $base06: #dfe2e5 !default;
 $base07: #f3f4f5 !default;
-$base08: #F2AE56 !default;
-$base09: #FCEA60 !default;
-$base0a: #6FE182 !default;
-$base0b: #7EFCFD !default;
-$base0c: #578CF7 !default;
-$base0d: #AB8DF8 !default;
-$base0e: #EA4BA6 !default;
-$base0f: #C1291C !default;
+$base08: #ff9800 !default;
+$base09: #ffd600 !default;
+$base0a: #0be666 !default;
+$base0b: #00e5ff !default;
+$base0c: #5796fc !default;
+$base0d: #916ff9 !default;
+$base0e: #fe5088 !default;
+$base0f: #d50000 !default;
 // ----------------------------------------------------------------------------
 // Layouts and responsiveness
 // ----------------------------------------------------------------------------
