--- a/_sass/yolo/themes/_solo.scss
+++ b/_sass/yolo/themes/_solo.scss
@@ -1,20 +1,20 @@
 // ----------------------------------------------------------------------------
-// domino theme
+// Solo theme, a nod to the OG.
 // ----------------------------------------------------------------------------
 $light-primary-color: #fff;
 $light-secondary-color: #000;
-$light-accent-color: #5f5f5f;
-$light-code-background-color: #000000;
-$light-code-color: #d5d5d5;
+$light-accent-color: #000;
+$light-code-background-color: #000;
+$light-code-color: #fff;
 $light-link-color: #2196f3;
 
 $dark-primary-color: #000;
 $dark-secondary-color: #fff;
-$dark-accent-color: #bdbdbd;
-$dark-code-background-color: #2d2d2d;
-$dark-code-color: #fff;
+$dark-accent-color: #fff;
+$dark-code-background-color: #fff;
+$dark-code-color: #000;
 $dark-link-color: #2196f3;
 
 $family-primary: "Inconsolata", sans-serif;
-$family-secondary: "Open Sans", sans-serif;
-$family-monospace: "Roboto Mono", monospace;
+$family-secondary: "Montserrat", sans-serif;
+$family-monospace: "Inconsolata", monospace;
