WIP, playing with new fonts

--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -16,6 +16,6 @@ $dark-code-color: #30ea7d;
 $dark-link-color: #65e9fc;
 
 // fonts
-$family-primary: "Roboto Mono", sans-serif;
-$family-secondary: "Raleway", sans-serif;
+$family-primary: "Roboto Mono", monospace;
+$family-secondary: "Poppins", sans-serif;
 $family-monospace: "Red Hat Mono", monospace;
