WIP syntax highlighting colors

--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -17,5 +17,5 @@ $dark-link-color: #65e9fc;
 
 // fonts
 $family-primary: "Roboto Mono", monospace;
-$family-secondary: "Poppins", sans-serif;
+$family-secondary: "Raleway", sans-serif;
 $family-monospace: "Red Hat Mono", monospace;
