--- a/_sass/yolo/_variables.scss
+++ b/_sass/yolo/_variables.scss
@@ -36,24 +36,18 @@ $weight-medium: 500 !default;
 $weight-semibold: 600 !default;
 $weight-bold: 700 !default;
 // ----------------------------------------------------------------------------
-// Syntax highlighting colors for dark and light themes
+// Syntax highlighting colors
 // ----------------------------------------------------------------------------
-$base00: #060E3F !default;
-$base01: #393f45 !default;
-$base02: #565e65 !default;
-$base03: #747c84 !default;
-$base04: #adb3ba !default;
-$base05: #c7ccd1 !default;
+$base04: #ababab !default;
+$base05: #ffc7da !default;
 $base06: #dfe2e5 !default;
-$base07: #f3f4f5 !default;
-$base08: #ff9800 !default;
-$base09: #ffd600 !default;
-$base0a: #0be666 !default;
-$base0b: #00e5ff !default;
-$base0c: #5796fc !default;
-$base0d: #916ff9 !default;
-$base0e: #fe5088 !default;
-$base0f: #d50000 !default;
+$base08: #ff6d00 !default;
+$base09: #d500f9 !default;
+$base0a: #01d62f !default;
+$base0b: #40f5f5 !default;
+$base0c: #304ffe !default;
+$base0d: #8457ff !default;
+$base0e: #ff4081 !default;
 // ----------------------------------------------------------------------------
 // Layouts and responsiveness
 // ----------------------------------------------------------------------------
