WIP syntax highlighting

--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -19,3 +19,14 @@ $dark-link-color: #65e9fc;
 $family-primary: "Roboto Mono", monospace;
 $family-secondary: "Raleway", sans-serif;
 $family-monospace: "Red Hat Mono", monospace;
+
+//$base04: #65e9fc;
+//$base05: #30ea7d;
+//$base06: #00b0ff;
+//$base08: #e9f4fe;
+//$base09: #ef0c81;
+//$base0a: #000;
+//$base0b: #000;
+//$base0c: #000;
+//$base0d: #000;
+//$base0e: #000;
