WIP dynamic syntax code color

--- a/_sass/yolo/_variables.scss
+++ b/_sass/yolo/_variables.scss
@@ -38,27 +38,16 @@ $weight-bold: 700 !default;
 // ----------------------------------------------------------------------------
 // Syntax highlighting colors
 // ----------------------------------------------------------------------------
-$base04: #ababab !default;
-$base05: #ffc7da !default;
-$base06: #dfe2e5 !default;
-$base08: #ff6d00 !default;
-$base09: #d500f9 !default;
-$base0a: #01d62f !default;
-$base0b: #40f5f5 !default;
-$base0c: #304ffe !default;
-$base0d: #8457ff !default;
-$base0e: #ff4081 !default;
-
-//$base04: #000 !default;
-//$base05: #000 !default;
-//$base06: #000 !default;
-//$base08: #000 !default;
-//$base09: #000 !default;
-//$base0a: #000 !default;
-//$base0b: #000 !default;
-//$base0c: #000 !default;
-//$base0d: #000 !default;
-//$base0e: #000 !default;
+$syntax01: #777fbd !default;
+$syntax02: #f3f4f7 !default;
+$syntax03: #dfe2e5 !default;
+$syntax04: #ff6d00 !default;
+$syntax05: #d500f9 !default;
+$syntax06: #01d62f !default;
+$syntax07: #40f5f5 !default;
+$syntax08: #304ffe !default;
+$syntax09: #9167fb !default;
+$syntax10: #ff4081 !default;
 // ----------------------------------------------------------------------------
 // Layouts and responsiveness
 // ----------------------------------------------------------------------------
