--- a/_sass/yolo/_base.scss
+++ b/_sass/yolo/_base.scss
@@ -70,6 +70,14 @@ p, ul, ol, dl, table, pre, blockquote {
   margin-bottom: 1rem;
 }
 
+pre, code {
+  font-family: $family-monospace;
+}
+
+pre {
+  font-size: 0.8rem;
+}
+
 ul, ol {
   padding-left: 1.5rem;
 }
